--- a/razdel/obzvon_frac/PD_obzvon.html
+++ b/razdel/obzvon_frac/PD_obzvon.html
@@ -17,17 +17,15 @@
 		</nav>
 	</header>
 	<!-- Подвал-->
-<!--	<footer>
+	<!-- <footer>
 		<span style="color: #CD853F">By</span><span style="color: #A0522D"> AShalutin</span>
-	</footer> -->
-	<!-- Нет подвала -->
-<!-- КОД -->
+	</footer>
+	 Нет подвала -->
 
-
-	<div class="ct"><div class="z-ct"><center>Федеральное Бюро Расследований</center></div> <div class="d-ct"> 
-		<ul style="margin: 0; padding: 0 0 0 5px;" class="cts-l">
+	 <div class="ct"><div class="z-ct"><center>Полицейский департамент</center></div> <div class="d-ct"> 
+	 	<ul style="margin: 0; padding: 0 0 0 5px;" class="cts-l">
 			<li>Кандитад тут?</li>
-			<li>Вы попали на обзвон пост лидера Федерального Бюро Расследований.</li>
+			<li>Вы попали на обзвон пост лидера Полицейского департамента.</li>
 			<li>Расскажите немного о себе.</li>
 			<li>Сколько  по времени в день вы играйте в SAMP?</li>
 			<li>Почему вы решили занять пост лидера и почему именно этой фракции и почему именно вы?</li>
@@ -125,7 +123,6 @@
 			<tr><td>Police Department</td><td>»</td><td>Army</td></tr>
 			<tr><td>Police Department</td><td>»</td><td>Police Department</td></tr>
 			<tr><td>FBI</td><td>»</td><td>Police Department</td></tr>
-			<tr><td>FBI</td><td>»</td><td>Army</td></tr>
 		</table>
 		<table class="perevod">
 			<caption>Из Army в PD</caption>
@@ -180,25 +177,16 @@
 			<tr><td>Заместитель Директора</td><td>»»</td><td>Капитан</td></tr>
 			<tr><td>Директор</td><td>»»</td><td>По согласованию с АДМ.</td></tr>
 		</table>
-		<table class="perevod">
-			<caption>Из FBI в Army</caption>
-			<tr><td>Агент</td><td>»»</td><td>Прапорщик</td></tr>
-			<tr><td>Старший агент</td><td>»»</td><td>Младший Лейтенант</td></tr>
-			<tr><td>Инспектор</td><td>»»</td><td>Лейтенант</td></tr>
-			<tr><td>Ректор академии</td><td>»»</td><td>Старший Лейтенант</td></tr>
-			<tr><td>Глава Отдела CID</td><td>»»</td><td>Капитан</td></tr>
-			<tr><td>Глава отдела JTTF</td><td>»»</td><td>Капитан</td></tr>
-			<tr><td>Глава отдела DEP</td><td>»»</td><td>Капитан</td></tr>
-			<tr><td>Заместитель Директора</td><td>»»</td><td>Майор</td></tr>
-			<tr><td>Директор</td><td>»»</td><td>По согласованию с АДМ.</td></tr>
-		</table>
 		</div>
 		<div class="z-ct-1"><center>Регламент деятельности</center></div>
 		<dl class="cts-d cts-dliz">
 			<dt>Кто из вашей организации имеет право находиться на территории армии?</dt>
-			<li>Агенты FBI в должности Агент и выше <span style="color: #F0E68C;">(4+ ранги)</span>.</li>
-			<li>Агенты FBI в должности Зам. Директора/Директор FBI.</li>
-			<li>Агенты FBI в должности Агент и выше <span style="color: #F0E68C;">(4+ранги)</span> имеют право заезжать на территорию части <strong>только</strong> для проведения следственно-розыскных мероприятий и <strong>только</strong> с разрешения старших офицеров Армии.</li>
+			<li>Офицеры SAPD имеют право заезжать на территорию армии при погонях за преступником, после которой они <strong>обязаны</strong> уехать.</li>
+			<li>Офицеры SAPD в должности <span style="color: #F0E68C;">Заместитель Шерифа / Шериф</span> имеют право заезжать на территорию части для проведения набора, предварительно оповестив об этом старших офицеров Армии и получив разрешение на данное действие.</li>
+			<dt>Можно ли выдавать розыск не видя факта нарушения?</dt>
+			<dd>Запрещено.</dd>
+			<dt>Обязаны ли офицеры находящиеся на территории Армии подчинятся ее Руководству?</dt>
+			<dd>Обязаны.</dd>
 		</dl>
 		<div class="z-ct-1"><center>Уголовный кодекс штата</center></div>
 		<dl class="cts-d cts-d-op">
@@ -211,47 +199,36 @@
 			<dd><span style="color: #FFA07A;">2.6.</span> УПОТРЕБЛЕНИЕ НАРКОТИЧЕСКИХ СРЕДСТВ</dd>
 			<li>Что такое ЧСП?</li>
 			<dd>ЧИСТОСЕРДЕЧНОЕ ПРИЗНАНИЕ</dd>
+			<dt>Теперь по Административному Кодексу</dt>
+			<li>Какой штраф За парковку в неположенном месте?</li>
+			<dd><span style="color: rgb(205, 92, 92, .8);">Штраф</span>: <span style="color: lime;">5.000$</span></dd>
+			<li>Какое наказание За посадку воздушного транспорта в неположенном месте?</li>
+			<dd><span style="color: rgb(205, 92, 92, .8);">Штраф</span>: <span style="color: lime;">30.000$</span> и <span style="color: #FFA07A;">изъятие лицензии на воздушный транспорт</span></dd>
 		</dl>
 		<div class="z-ct-1"><center>Должностная структура</center></div>
 		<div>
 			<table class="perevod">
 				<caption>Должностная структура</caption>
-				<tr><td>Инспектор</td><td>»»</td><td>3</td></tr>
-				<tr><td>Ректор академии</td><td>»»</td><td>1</td></tr>
-				<tr><td>Глава отдела CID</td><td>»»</td><td>1</td></tr>
-				<tr><td>Глава отдела JTTF</td><td>»»</td><td>1</td></tr>
-				<tr><td>Глава отдела DEP</td><td>»»</td><td>1</td></tr>
-				<tr><td>Зам директора</td><td>»»</td><td>2</td></tr>
+				<tr><td>Майор</td><td>»»</td><td>3</td></tr>
+				<tr><td>Зам. шефа</td><td>»»</td><td>2</td></tr>
 			</table>
 		</div>
 		<div class="z-ct-1"><center>Правила повышения сотрудников</center></div>
 		<dl class="cts-d cts-d-op">
 			<dt>Расскажите Правила повышений сотрудников</dt>
-			<li>Ученик академии <span style="color: #FFA07A;">[1]</span></li>
-			<dd>Имеют право повысится на следующий день после призыва сдав необходимые <i>тесты</i> и данные ему <i>задачи</i>.</dd>
-			<li>Стажер <span style="color: #FFA07A;">[2]</span> - Младший агент <span style="color: #FFA07A;">[3]</span></li>
-			<dd><span style="color: #F0E68C;">(включительно)</span> повышаются не чаще, чем <b>один раз в три дня</b>.</dd>
-			<li>Младший агент <span style="color: #FFA07A;">[3]</span> - Старший Агент <span style="color: #FFA07A;">[5]</span></li>
-			<dd><span style="color: #F0E68C;">(включительно)</span> повышаются не чаще, чем <b>один раз в пять дней</b>.</dd>
-			<li>Инспектор <span style="color: #FFA07A;">[6]</span> - Глава отдела DEP <span style="color: #FFA07A;">[10]</span></li>
-			<dd><span style="color: #F0E68C;">(включительно)</span> повышаются не чаще, чем <b>один раз в семь дней</b>.</dd>
-			<li>Зам. Директор <span style="color: #FFA07A;">[11]</span></li>
-			<dd><span style="color: #F0E68C;">(включительно)</span> повышаются не чаще, чем один <b>раз в десять дней</b>.</dd>
+			<li>Курсант<span style="color: #FFA07A;">[1]</span></li>
+			<dd>имеют право повысится на следующий день после призыва сдав необходимые тесты и данные ему задачи</dd>
+			<li>Офицер I <span style="color: #FFA07A;">[2]</span> - Сержант I <span style="color: #FFA07A;">[5]</span></li>
+			<dd><span style="color: #F0E68C;">(включительно)</span> повышаются не чаще, чем один раз в два дня</dd>
+			<li>Сержант I <span style="color: #FFA07A;">[5]</span> - Детектив II <span style="color: #FFA07A;">[8]</span></li>
+			<dd><span style="color: #F0E68C;">(включительно)</span> повышаются не чаще, чем один раз в пять дней</dd>
+			<li>Детектив II <span style="color: #FFA07A;">[8]</span> - Капитан <span style="color: #FFA07A;">[10]</span></li>
+			<dd><span style="color: #F0E68C;">(включительно)</span> повышаются не чаще, чем один раз в неделю</dd>
+			<li>Капитан <span style="color: #FFA07A;">[10]</span> - Зам. Шефа <span style="color: #FFA07A;">[12]</span></li>
+			<dd><span style="color: #F0E68C;">(включительно)</span> повышаются не чаще, чем один раз в десять дней</dd>
 		</dl>
 
 
-
-
-
-
-
-
-
-
-
-	 </div></div>
-
-
-
+		 </div></div>
 </body>
 </html>
