--- a/razdel/obzvon_frac/PD_obzvon.html
+++ b/razdel/obzvon_frac/PD_obzvon.html
@@ -95,9 +95,9 @@
 				<li>Если вам что то не <strong>понятно</strong> в /d то вы можете спросить об этом в /dn.</li>
 				<li>Бред и тому подобное <span style="color: rgb(205, 92, 92, .9);">наказуемо</span>.</li>
 				<dt>Расскажите тэг своей государственной организации</dt>
-				<li style="color: #F0E68C;">FBI</li>
+				<li style="color: #F0E68C;">LSPD   SFPD   LVPD</li>
 				<dt>С какого уровня возможен прием в вашу организацию?</dt>
-				<li><span style="color: #F0E68C;">8 lvl</span></li>
+				<li><span style="color: #F0E68C;">5 lvl</span></li>
 			</dl>
 			<!-- ---------------------------------------------------------------->
 
