--- a/razdel/obzvon.html
+++ b/razdel/obzvon.html
@@ -23,7 +23,7 @@
 	<!-- Нет подвала -->
 <!-- КОД -->
 
-	<div class="razd"><div class="d-razd"><center>Фракция для обзвона</center></div><div class="dd-razd"><span class="s-razd"><a href="obzvon_frac/FBI_obzvon.html">Федеральное Бюро Расследований</a></span></div><div class="dd-razd"><span class="s-razd"><a href="obzvon_frac/PD_obzvon.html">Полицейский департамент</a></span></div><div class="dd-razd"><span class="s-razd"><a href="obzvon_frac/MZ_obzvon.html">Министерство Здравоохранения</a></span></div><div class="dd-razd"><span class="s-razd"><a href="#">Министерство Обороны</a></span></div></div>
+	<div class="razd"><div class="d-razd"><center>Фракция для обзвона</center></div><div class="dd-razd"><span class="s-razd"><a href="obzvon_frac/FBI_obzvon.html">Федеральное Бюро Расследований</a></span></div><div class="dd-razd"><span class="s-razd"><a href="obzvon_frac/PD_obzvon.html">Полицейский департамент</a></span></div><div class="dd-razd"><span class="s-razd"><a href="obzvon_frac/MZ_obzvon.html">Министерство Здравоохранения</a></span></div></div>
 
 	
 
