--- a/razdel/obzvon_frac/FBI_obzvon.html
+++ b/razdel/obzvon_frac/FBI_obzvon.html
@@ -69,6 +69,8 @@
 			<li>Строгий выговор.</li>
 			<dt>Сколько дней есть у лидера на заполнение форума?</dt>
 			<li><span style="color: #F0E68C;">3</span> Дня.</li>
+			<dt>Разрешено ли удалять темы прошлого лидера?</dt>
+			<li>Нельзя</li>
 		</dl>
 	<div class="z-ct-1"><center>Государственная Волна</center></div>
 		<dl class="cts-d cts-dliz">
