--- a/razdel/obzvon_frac/Army_obzvon.html
+++ b/razdel/obzvon_frac/Army_obzvon.html
@@ -17,21 +17,23 @@
 		</nav>
 	</header>
 	<!-- Подвал-->
-	<!-- <footer>
+<!--	<footer>
 		<span style="color: #CD853F">By</span><span style="color: #A0522D"> AShalutin</span>
-	</footer>
-	 Нет подвала -->
-	<div class="ct"><div class="z-ct"><center>Министерство Здравоохранения</center></div> <div class="d-ct"> 
+	</footer> -->
+	<!-- Нет подвала -->
+<!-- КОД -->
+
+	<div class="ct"><div class="z-ct"><center>Федеральное Бюро Расследований</center></div> <div class="d-ct"> 
 		<ul style="margin: 0; padding: 0 0 0 5px;" class="cts-l">
 			<li>Кандитад тут?</li>
-			<li>Вы попали на обзвон пост лидера Министерство Здравоохранения города...</li>
+			<li>Вы попали на обзвон пост лидера Федерального Бюро Расследований.</li>
 			<li>Расскажите немного о себе.</li>
 			<li>Сколько  по времени в день вы играйте в SAMP?</li>
 			<li>Почему вы решили занять пост лидера и почему именно этой фракции и почему именно вы?</li>
 			<li>Имели ли вы баны или варны на аккаунте?</li>
 			<li>Не помешает ли учеба / Работа, вам стоять на посту лидера?</li>
 		</ul>
-		<div class="z-ct-1"><center>Общее</center></div>
+	<div class="z-ct-1"><center>Общее</center></div>
 		<dl class="cts-d cts-dliz">
 			<dt>Расскажите обязаности лидера.</dt>
 			<li>лидер <strong>обязан</strong> поддерживать порядок в чате и на форуме, во фракции в целом.</li>
@@ -96,50 +98,97 @@
 				<li>Если вам что то не <strong>понятно</strong> в /d то вы можете спросить об этом в /dn.</li>
 				<li>Бред и тому подобное <span style="color: rgb(205, 92, 92, .9);">наказуемо</span>.</li>
 				<dt>Расскажите тэг своей государственной организации</dt>
-				<li style="color: #F0E68C;">HLS  HSF  HLV</li>
+				<li style="color: #F0E68C;">NGSA</li>
 				<dt>С какого уровня возможен прием в вашу организацию?</dt>
-				<li><span style="color: #F0E68C;">3 lvl</span></li>
+				<li><span style="color: #F0E68C;">2 lvl</span></li>
 			</dl>
 			<!-- ---------------------------------------------------------------->
-			<div class="z-ct-1"><center>Должностная структура</center></div>
-			<div>
+		<div class="z-ct-1"><center>Правила приема и система переводов</center></div>
+		<dl class="cts-d cts-dliz">
+			<dt>Расскажите правила переводов между государственными организациями</dt>
+		</dl>
+		<div>
+		<table class="perevod">
+			<caption>Правила переводов</caption>
+			<tr><td>Army</td><td>»</td><td>Police Department</td></td>
+			<tr><td>Police Department</td><td>»</td><td>Army</td></tr>
+			<tr><td>FBI</td><td>»</td><td>Army</td></tr>
+		</table>
+		<table class="perevod">
+			<caption>Из Army в PD</caption>
+			<tr><td>Сержант</td><td>»»</td><td>Курсант</td></tr>
+			<tr><td>Прапорщик</td><td>»»</td><td>Офицер I</td></tr>
+			<tr><td>Младший Лейтенант</td><td>»»</td><td>Офицер II</td></tr>
+			<tr><td>Лейтенант</td><td>»»</td><td>Старший офицер</td></tr>
+			<tr><td>Старший Лейтенант</td><td>»»</td><td>Сержант I</td></tr>
+			<tr><td>Капитан</td><td>»»</td><td>Сержант II</td></tr>
+			<tr><td>Майор</td><td>»»</td><td>Детектив I</td></tr>
+			<tr><td>Подполковник</td><td>»»</td><td>Детектив II</td></tr>
+			<tr><td>Полковник</td><td>»»</td><td>Лейтенант</td></tr>
+			<tr><td>Генерал</td><td>»»</td><td>По согласованию с АДМ.</td></tr>
+		</table>
+		<table class="perevod">
+			<caption>Из PD в Army</caption>
+			<tr><td>Старший офицер</td><td>»»</td><td>Младший Сержант</td></tr>
+			<tr><td>Сержант I</td><td>»»</td><td>Сержант</td></tr>
+			<tr><td>Сержант II</td><td>»»</td><td>Сержант</td></tr>
+			<tr><td>Детектив I</td><td>»»</td><td>Прапорщик</td></tr>
+			<tr><td>Детектив II</td><td>»»</td><td>Прапорщик</td></tr>
+			<tr><td>Лейтенант</td><td>»»</td><td>Младший Лейтенант</td></tr>
+			<tr><td>Капитан</td><td>»»</td><td>Лейтенант</td></tr>
+			<tr><td>Майор</td><td>»»</td><td>Старший Лейтенант</td></tr>
+			<tr><td>Заместитель Шерифа</td><td>»»</td><td>Капитан</td></tr>
+			<tr><td>Шериф</td><td>»»</td><td>По согласованию с АДМ.</td></tr>
+		</table>
+		<table class="perevod">
+			<caption>Из FBI в Army</caption>
+			<tr><td>Агент</td><td>»»</td><td>Прапорщик</td></tr>
+			<tr><td>Старший агент</td><td>»»</td><td>Младший Лейтенант</td></tr>
+			<tr><td>Инспектор</td><td>»»</td><td>Лейтенант</td></tr>
+			<tr><td>Ректор академии</td><td>»»</td><td>Старший Лейтенант</td></tr>
+			<tr><td>Глава Отдела CID</td><td>»»</td><td>Капитан</td></tr>
+			<tr><td>Глава отдела JTTF</td><td>»»</td><td>Капитан</td></tr>
+			<tr><td>Глава отдела DEP</td><td>»»</td><td>Капитан</td></tr>
+			<tr><td>Заместитель Директора</td><td>»»</td><td>Майор</td></tr>
+			<tr><td>Директор</td><td>»»</td><td>По согласованию с АДМ.</td></tr>
+		</table>
+		</div>
+		<div class="z-ct-1"><center>Регламент деятельности</center></div>
+		<dl class="cts-d cts-dliz">
+			<dt>Кто имеет право находится на территории Армии?</dt>
+			<li>Агенты FBI в должности Агент и выше (4+ ранги)</li>
+			<li>Сотрудники Правительства в должности Комиссар/Заместитель Губернатора/Губернатор</li>
+			<li>Офицеры SAPD при погонях за преступником</li>
+			<li>Сотрудники Министерства Здравоохранения с рабочими целям</li>
+			<dt>Кто из военных может покидать Военную часть?</dt>
+			<li>Военнослужащие в звании Младший Лейтенант - Капитан с разрешения старшего офицера.</li>
+			<li>До звания Младший Лейтенант (до 5 ранга) в сопровождении офицера или бойца спецподразделения с разрешения старшего офицера.</li>
+		</dl>
+		<div class="z-ct-1"><center>Должностная структура</center></div>
+		<div>
 			<table class="perevod">
 				<caption>Должностная структура</caption>
-				<tr><td>Заведующий отделением</td><td>»»</td><td>3</td></tr>
-				<tr><td>Зам. Главного Врача</td><td>»»</td><td>2</td></tr>
+				<tr><td>Майор</td><td>»»</td><td>3</td></tr>
+				<tr><td>Подполковник</td><td>»»</td><td>3</td></tr>
+				<tr><td>Полковник</td><td>»»</td><td>2</td></tr>
 			</table>
 		</div>
 		<div class="z-ct-1"><center>Правила повышения сотрудников</center></div>
 		<dl class="cts-d cts-d-op">
 			<dt>Расскажите Правила повышений сотрудников</dt>
-			<li>Интерн<span style="color: #FFA07A;">[1]</span></li>
-			<dd>имеют право повысится на следующий день после призыва сдав необходимые тесты и данные ему задачи</dd>
-			<li>Фельдшер <span style="color: #FFA07A;">[2]</span> - Терапевт <span style="color: #FFA07A;">[4]</span></li>
-			<dd><span style="color: #F0E68C;">(включительно)</span> повышаются не чаще, чем один раз в три дня</dd>
-			<li>Терапевт <span style="color: #FFA07A;">[4]</span> - Окулист <span style="color: #FFA07A;">[6]</span></li>
-			<dd><span style="color: #F0E68C;">(включительно)</span> овышаются не чаще, чем один раз в пять дней</dd>
-			<li>Окулист <span style="color: #FFA07A;">[6]</span> - Хирург <span style="color: #FFA07A;">[7]</span></li>
-			<dd><span style="color: #F0E68C;">(включительно)</span> повышаются не чаще, чем один раз в семь дней</dd>
-			<li>Хирург <span style="color: #FFA07A;">[7]</span> - Зам. Главного врача <span style="color: #FFA07A;">[9]</span></li>
-			<dd><span style="color: #F0E68C;">(включительно)</span> повышаются не чаще, чем один раз в десять дней</dd>
-		</dl>
-		<div class="z-ct-1"><center>Ценовая политика</center></div>
-		<dl class="cts-d cts-dliz">
-			<dt>Сколько стоит лечение обычного гражданина?</dt>
-			<li>В госпитали: <span style="color: #F0E68C;">500</span><span style="color: green;">$</span></li>
-			<li>Вне госпитали: <span style="color: #F0E68C;">800</span><span style="color: green;">$</span></li>
-			<dt>Сколько стоит лечение сотрудника государственных структур?</dt>
-			<li>В госпитали: <span style="color: #F0E68C;">300</span><span style="color: green;">$</span></li>
-			<li>В госпитали: <span style="color: #F0E68C;">600</span><span style="color: green;">$</span></li>
-			<dt>Расскажите правила Оформление медицинской карты</dt>
-			<li>c пропиской до двух лет: <span style="color: #F0E68C;">Бесплатно</span></li>
-			<li>c пропиской от трёх до шести: <span style="color: #F0E68C;">3.000</span><span style="color: green;">$</span></li>
-			<li>c пропиской от семи лет: <span style="color: #F0E68C;">5.000</span><span style="color: green;">$</span></li>
-			<li>Замена с Мед.Осмотром: <span style="color: #F0E68C;">Бесплатно</span></li>
-			<li>Замена без Мед.Осмотра: <span style="color: #F0E68C;">10.000</span><span style="color: green;">$</span></li>
+			<li>Рядовой <span style="color: #FFA07A;">[1]</span></li>
+			<dd>Имеют право повысится на следующий день после призыва сдав необходимые <i>тесты</i> и данные ему <i>задачи</i>.</dd>
+			<li>Мл.Сержант <span style="color: #FFA07A;">[2]</span> - Прапорщик <span style="color: #FFA07A;">[4]</span></li>
+			<dd><span style="color: #F0E68C;">(включительно)</span> повышаются не чаще, чем <b>один раз в три дня</b>.</dd>
+			<li>Прапорщик <span style="color: #FFA07A;">[4]</span> - Лейтенант <span style="color: #FFA07A;">[6]</span></li>
+			<dd><span style="color: #F0E68C;">(включительно)</span> повышаются не чаще, чем <b>один раз в пять дней</b>.</dd>
+			<li>Лейтенант <span style="color: #FFA07A;">[6]</span> - Капитан <span style="color: #FFA07A;">[8]</span></li>
+			<dd><span style="color: #F0E68C;">(включительно)</span> повышаются не чаще, чем <b>один раз в семь дней</b>.</dd>
+			<li>Капитан <span style="color: #FFA07A;">[8]</span> - Капитан <span style="color: #FFA07A;">[11]</span></li>
+			<dd><span style="color: #F0E68C;">(включительно)</span> повышаются не чаще, чем один <b>раз в десять дней</b>.</dd>
 		</dl>
 
 
-	</div></div>
+</div></div>
 </body>
 </html>
