--- a/razdel/obzvon_frac/Army_obzvon.html
+++ b/razdel/obzvon_frac/Army_obzvon.html
@@ -23,7 +23,7 @@
 	<!-- Нет подвала -->
 <!-- КОД -->
 
-	<div class="ct"><div class="z-ct"><center>Федеральное Бюро Расследований</center></div> <div class="d-ct"> 
+	<div class="ct"><div class="z-ct"><center>Министерство Обороны</center></div> <div class="d-ct"> 
 		<ul style="margin: 0; padding: 0 0 0 5px;" class="cts-l">
 			<li>Кандитад тут?</li>
 			<li>Вы попали на обзвон пост лидера Федерального Бюро Расследований.</li>
